tests/parsing/smtlib/v2.6/errors/060_declare-datatypes_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/060_declare-datatypes_unclosed_1.smt2", line 2, character 37-38:
2 | (declare-datatypes ((foo 0)) (((A))) _)
                                         ^
Error while parsing a datatypes declaration, read the reserved word '_',
      but expected a closing parenthesis.
